--- a/src/app/Components/user/user.component.html
+++ b/src/app/Components/user/user.component.html
@@ -8,7 +8,7 @@
                 <mat-icon title="Grid View" *ngIf="viewMode === 'list'">grid_on</mat-icon>
             </button>
             <button mat-icon-button class="mat-icon-button" (click)="toggleView('list')">
-                <mat-icon title="View List" *ngIf="viewMode === 'grid'">view_list</mat-icon>
+                <mat-icon title="List View" *ngIf="viewMode === 'grid'">view_list</mat-icon>
             </button>
         </div>
     </div>
